add some images-illustarations

--- a/src/app/pages/courses/courses.component.html
+++ b/src/app/pages/courses/courses.component.html
@@ -101,16 +101,17 @@
   <div class="container text-center">
     <div class="row mt-4">
       <div class="col-md-6">
-        <img src="/images/confused.png" class="w-100" alt="" srcset="">
+        <img src="assets\other-images\icegif-856.gif" class="w-100" alt="" srcset="">
+
       </div>
       <div class="col-md-6">
         <div>
-          <div class="display-5 fw-bold mt-10">Still Unable to Decide? We got yout back...<br> <a class="text-center" style="cursor: pointer;" (click)="goToForm()">Click here</a></div>
+          <div class="display-5 fw-bold mt-10">Still Unable to Decide? We got yout back...<br> <a class="text-center" style="cursor: pointer;" (click)="goToForm()"><span class="pointing-hand">👉</span>Click here</a></div>
         </div>
       </div>
     </div>
     <div class="display-6 fw-bold text-center">
-      Want an <span class="text-danger">Exciting Offer</span> for Enrollment? <a class="text-center" style="cursor: pointer;" (click)="goToForm()">Click here</a>
+      Want an <span class="text-danger">Exciting Offer</span> for Enrollment? <a class="text-center" style="cursor: pointer;" (click)="goToForm()">Click here<span class="pointing-hand">👈</span></a>
     </div>
   </div>
 </section>
