--- a/src/app/pages/courses/courses.component.scss
+++ b/src/app/pages/courses/courses.component.scss
@@ -13,3 +13,18 @@
   background-attachment: fixed;
   margin: 0;
 }
+
+@keyframes pointAnimation {
+  0%, 100% {
+    transform: translateX(0) rotate(0);
+  }
+  50% {
+    transform: translateX(10px) rotate(10deg);
+  }
+}
+
+/* Apply animation to the hand emoji */
+.pointing-hand {
+  display: inline-block;
+  animation: pointAnimation 1s infinite ease-in-out;
+}
