--- a/src/app/pages/services/artificial-inteligence/artificial-inteligence.component.html
+++ b/src/app/pages/services/artificial-inteligence/artificial-inteligence.component.html
@@ -5,7 +5,17 @@
         <div class="section-heading">
           <div class="row">
             <div class="col-md-4">
-              <img src="/images/services/ai-consult.png" alt="" class="w-100">
+              <!-- <img src="/images/services/ai-consult.png" alt="" class="w-100"> -->
+              <video 
+              autoplay 
+              muted 
+              loop 
+              playsinline
+              style="width: 100%; height: auto;"
+          >
+              <source src="assets\other-images\911968572804Tech_Assistant.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+          </video>
             </div>
             <div class="col-md-8">
               <h2>AI Consulting</h2>
@@ -75,7 +85,17 @@
               </p>
             </div>
             <div class="col-md-3">
-              <img src="/images/services/generative.png" alt="" class="w-100">
+              <!-- <img src="/images/services/generative.png" alt="" class="w-100"> -->
+              <video 
+              autoplay 
+              muted 
+              loop 
+              playsinline
+              style="width: 100%; height: auto;"
+          >
+              <source src="assets\other-images\9Hd7o8Z4r4j3DLtg8y.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+          </video>
             </div>
           </div>
 
@@ -117,7 +137,17 @@
         <div class="section-heading">
           <div class="row">
             <div class="col-md-4">
-              <img src="/images/services/m-learning.webp" alt="" class="w-100">
+              <!-- <img src="/images/services/m-learning.webp" alt="" class="w-100"> -->
+              <video 
+              autoplay 
+              muted 
+              loop 
+              playsinline
+              style="width: 100%; height: auto;"
+          >
+              <source src="assets\other-images\96UnWXSb8WU7E7i079.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+          </video>
             </div>
             <div class="col-md-8">
               <h2>Machine Learning</h2>
@@ -213,7 +243,17 @@
               </p>
             </div>
             <div class="col-md-5">
-              <img src="/images/services/mobile_dev.png" alt="" class="w-100">
+              <!-- <img src="/images/services/mobile_dev.png" alt="" class="w-100"> -->
+              <video 
+              autoplay 
+              muted 
+              loop 
+              playsinline
+              style="width: 100%; height: auto;"
+          >
+              <source src="assets\other-images\9NBA732gZF32u8EKFx (2).mp4" type="video/mp4">
+              Your browser does not support the video tag.
+          </video>
             </div>
           </div>
 
@@ -277,7 +317,17 @@
               </p>
             </div>
             <div class="col-md-4">
-              <img src="/images/services/chatbot.png" alt="" class="w-100">
+              <!-- <img src="/images/services/chatbot.png" alt="" class="w-100"> -->
+              <video 
+              autoplay 
+              muted 
+              loop 
+              playsinline
+              style="width: 100%; height: auto;"
+          >
+              <source src="assets\other-images\76C59lkp737szDoig9.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+          </video>
             </div>
           </div>
 
