--- a/src/app/pages/services/business-consulting/business-consulting.component.html
+++ b/src/app/pages/services/business-consulting/business-consulting.component.html
@@ -61,7 +61,17 @@
               </div>
             </div>
             <div class="col-md-5">
-              <img src="/images/services/business.webp" alt="" class="w-100">
+              <!-- <img src="/images/services/business.webp" alt="" class="w-100"> -->
+              <video 
+              autoplay 
+              muted 
+              loop 
+              playsinline
+              style="width: 100%; height: auto;"
+          >
+              <source src="assets\other-images\Q9D9A385l42443eyWs.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+          </video>
             </div>
           </div>
         </div>
