--- a/src/app/pages/services/emerging-trends/emerging-trends.component.html
+++ b/src/app/pages/services/emerging-trends/emerging-trends.component.html
@@ -23,7 +23,7 @@
               </div>
             </div>
             <div class="col-md-4">
-              <img src="/images/services/ar.png" alt="" class="w-100">
+              <img src="assets/other-images/IT-FUTURZ-SEMINAR.gif" alt="" class="w-100">
             </div>
           </div>
 
@@ -145,7 +145,7 @@
               </a>
             </div>
             <div class="col-md-4">
-              <img src="/images/services/iot.png" alt="" class="w-100">
+              <img src="assets\other-images\e1b0076384ab9737c6dc65d165180d86.gif" alt="" class="w-100">
             </div>
           </div>
 
@@ -196,7 +196,17 @@
               </p>
             </div>
             <div class="col-md-5">
-              <img src="/images/services/ott.png" alt="" class="w-100">
+              <!-- <img src="/images/services/ott.png" alt="" class="w-100"> -->
+              <video 
+              autoplay 
+              muted 
+              loop 
+              playsinline
+              style="width: 100%; height: auto;"
+          >
+              <source src="assets\other-images\911LM7RK525LoXVMDo.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+          </video>
             </div>
           </div>
         </div>
