--- a/src/app/pages/services/product-development/product-development.component.html
+++ b/src/app/pages/services/product-development/product-development.component.html
@@ -13,7 +13,17 @@
               and attract early adopters. Leverage our proven methods to test your concepts and iterate rapidly for success.</p>
             </div>
             <div class="col-md-5">
-              <img src="/images/services/mvp.webp" alt="" class="w-100">
+              <!-- <img src="/images/services/mvp.webp" alt="" class="w-100"> -->
+              <video 
+              autoplay 
+              muted 
+              loop 
+              playsinline
+              style="width: 100%; height: auto;"
+          >
+              <source src="assets\other-images\ktT63E847Uhl0V8ldB.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+          </video>
             </div>
           </div>
 
@@ -73,7 +83,17 @@
         <div class="section-heading">
           <div class="row">
             <div class="col-md-4">
-              <img src="/images/services/web_dev.png" alt="" class="w-100">
+              <img src="assets\other-images\Full-Stack-3.gif" alt="" class="w-100">
+              <!-- <video 
+              autoplay 
+              muted 
+              loop 
+              playsinline
+              style="width: 100%; height: auto;"
+          >
+              <source src="your-video-url.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+          </video> -->
             </div>
             <div class="col-md-8">
               <h2>Website Development</h2>
@@ -152,7 +172,18 @@
               </p>
             </div>
             <div class="col-md-5">
-              <img src="/images/services/mobile_dev.png" alt="" class="w-100">
+              <!-- <img src="/images/services/mobile_dev.png" alt="" class="w-100"> -->
+              <video 
+              autoplay 
+              muted 
+              loop 
+              playsinline
+              style="width: 100%; height: auto;"
+          >
+              <source src="assets\other-images\8zDfYdiaL7vu4IkAF5.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+          </video>
+              
             </div>
           </div>
 
