changes some content

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -52,8 +52,8 @@
         <div class="about-right">
           <h4 class="custom-text-green h3 mb-3">Why Choose Us?</h4>
           <h2 class="display-4 font-bold mb-4">
-            We are working with <br>
-            17+ years experience
+           
+            17+ years of  <br> experience
           </h2>
           <p>
             We just don’t sell our product or services, We are here to grow your business. We analyse your business and
