--- a/src/app/partials/footer/footer.component.html
+++ b/src/app/partials/footer/footer.component.html
@@ -64,11 +64,11 @@
                 <div>
                   <div>
                     <b>Support&nbsp;:</b>&nbsp;
-                    <a style="color: #e3e3e3;" href="mailto:hello@itfuturz.com">{{'hello@itfuturz.com'}}</a>
+                    <a style="color: #e3e3e3;" href="mailto:contact@itfuturz.com">{{'contact@itfuturz.com'}}</a>
                   </div>
                   <div>
                     <b>Hire Resource&nbsp;:</b>&nbsp;
-                    <a style="color: #e3e3e3;" href="mailto:recruit@itfuturz.com">{{'recruit@itfuturz.com'}}</a>
+                    <a style="color: #e3e3e3;" href="mailto:recruiter@itfuturz.com">{{'recruiter@itfuturz.com'}}</a>
                   </div>
                   <div>
                     <b>Course Inquiry&nbsp;:</b>&nbsp;
@@ -83,8 +83,8 @@
               <div style="font-size: 13px;" class="text-white mt-3">
                 <div>
                   <b>Contact:</b> &nbsp;
-                  <a href="tel:+916354390540" class="text-white">
-                    <i class="ri-phone-line"></i>{{'+91 6354390540'}}
+                  <a href="tel:+919979066311" class="text-white">
+                    <i class="ri-phone-line"></i>{{'+91 9979066311'}}
                   </a>
                 </div>
                 <a href="https://maps.app.goo.gl/MD4ySZutSabjJJCLA" class="text-white">
