--- a/src/app/partials/footer/footer.component.html
+++ b/src/app/partials/footer/footer.component.html
@@ -72,7 +72,7 @@
                   </div>
                   <div>
                     <b>Course Inquiry&nbsp;:</b>&nbsp;
-                    <a style="color: #e3e3e3;" href="mailto:course_inquiry@itfuturz.com">{{'course_inquiry@itfuturz.com'}}</a>
+                    <a style="color: #e3e3e3;" href="mailto:inquiry@itfuturz.com">{{'inquiry@itfuturz.com'}}</a>
                   </div>
                   <div>
                     <b>Career with IT Futurz&nbsp;:</b>&nbsp;
