--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -63,6 +63,51 @@
   </div>
 </section>
 
+
+<div class="container py-5">
+  <div class="row g-3">
+    <div class="col-md-4 courses-card ">
+      <div class="card  border-0 shadow h-100 animated-border py-5 mission-card">
+        <div class="card-body">
+          <h5 class="card-title">
+            <span class="bi bi-broadcast card-icon">🎯</span>
+            <i class="bi bi-broadcast"></i>Mission
+          </h5>
+          <p class="card-text">
+            Our mission is to inspire progress and enhance lives through innovative solutions, creating a better future for all. We are committed to pushing the boundaries of technology and harnessing its power for positive change.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4 courses-card">
+      <div class="card  border-0 shadow h-100 animated-border py-5 mission-card">
+        <div class="card-body  ">
+          <h5 class="card-title">
+            <span class="bi bi-broadcast card-icon">📣</span>
+            <i class="bi bi-gear-fill"></i>Vision
+          </h5>
+          <p class="card-text">
+            We envision a boundless world of innovation, driving global growth and well-being through endless possibilities. Our vision is to create a sustainable and inclusive future where technology serves humanity.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4 courses-card">
+      <div class="card  border-0 shadow h-100 animated-border py-5 mission-card">
+        <div class="card-body">
+          <h5 class="card-title">
+            <span class="bi bi-broadcast card-icon">💪</span>
+            <i class="bi bi-lightbulb"></i>Goal
+          </h5>
+          <p class="card-text">
+            We aim to lead in tech, innovating with AI and IoT to improve the world and set high standards in our field. Our goal is to drive meaningful impact and empower people through cutting-edge technology.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <section class="brand-logo py-5">
   <div class="container">
     <div class="row justify-content-center">
