--- a/src/app/partials/header/header.component.html
+++ b/src/app/partials/header/header.component.html
@@ -34,8 +34,17 @@
           <li class="nav-item">
             <a class="nav-link"  href="/hire-developers">Hire Developers</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link"  href="/courses">Courses</a>
+           <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Utilites
+            </a>
+            <ul class="dropdown-menu dropdown-menu-start ">
+              <li><a class="dropdown-item" target="_blank" href="https://qr-generator.itfuturz.in">QR Generator</a></li>
+              <li><a class="dropdown-item" target="_blank" href="https://relink.itfuturz.in">Unique Link Generator</a></li>
+              <li><a class="dropdown-item" target="_blank" href="https://url-shortner.itfuturz.in">URL Shortner</a></li>
+              <li><a class="dropdown-item" target="_blank" href="https://vcf-generator.itfuturz.in">VCF From Excel</a></li>
+              <li><a class="dropdown-item" target="_blank" href="https://resume.itfuturz.in">Resume Builder</a></li>
+            </ul>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/about">About Us</a>
